--- a/app/views/templates/home.html
+++ b/app/views/templates/home.html
@@ -1,9 +1,17 @@
 <div class="container-fluid">
-<div class="row" style="margin-right:100px; margin-left:100px">
-<fieldset style="border: 2px solid #999 !important;margin-right:4px;padding: 0.35em 0.625em 0.75em;background-color: #ffffff; border-radius:15px;height: 453px">
+<!--<div class="row" style="margin-right:100px; margin-left:100px">
+<fieldset style="border: 3px solid #999 !important;margin-right:4px;padding: 0.35em 0.625em 0.75em;background-color: #ffffff; border-radius:15px;height:568px">
 
-<h1><center>this is maa voori rice application soon.....</center></h1>
-
+<h1>
+<center>this is maa voori rice application soon.....</center></h1>
 </fieldset>
+</div>-->
+<div class="row">
+	<div class="col-lg-2"></div>
+	<div class="col-lg-8" style="border: 3px solid #999; border-radius: 15px; height: 568px">
+	<h1>
+    <center>This is Maa Oori Rice Application Soon.....</center></h1>	
+	</div>
+	<div class="col-lg-2"></div>
 </div>
 </div>
