--- a/app/views/templates/menu.html
+++ b/app/views/templates/menu.html
@@ -1,40 +1,47 @@
 <div class="container-fluid">
 	<div class="row">
 	<fieldset style="border: 2px solid #c0c0c0; background-color:#e1e1d0">
-	<div class="row">
-	  <div class="col-lg-2">
-	     <a href="#/"><center>Home </center></a>  
+	<div class="row" style="height:2px">
+	<div class="col-lg-2"></div>
+	  <div class="col-lg-2" style="font-size:16px">
+
+	     <a href="#/" class="" style="margin-right:5px">
+	     	<span><i class="glyphicon glyphicon-home"></i></span>
+	     	<span> Home</span>
+	     </a>  
 	  </div>
-	<div class="col-lg-2">
-    <div class="dropdown">
-    <a href="javascript:;" class=" dropdown-toggle" type="mouseenter" data-toggle="dropdown">Product Details <span class="caret"></span></a>
-    
+	<div class="col-lg-2" style="font-size:16px">
+	<a href="javascript:" ng-click="productDtls();" >product Details</a>
+     <!--<div class="dropdown">
+      <a href="javascript:" ng-click="produtDtls();" class=" dropdown-toggle" type="mouseenter" data-toggle="dropdown">Product Details 
+       <span class="caret"></span></a>
     <ul class="dropdown-menu">
       <li><a href="#">Brown Rice</a></li>
       <li><a href="#">One Time Polished Rice</a></li>
       <li><a href="#">Polished Rice</a></li>
-      <li class="divider"></li>
-      <li><a href="#">Place Order</a></li>
     </ul>
-  </div>
+    </div>-->
+	</div>
+	    <div class="col-lg-2" style="font-size:16px">
+	      <a href="javasript:" ng-click="gotoPo();">Place Order </a>
 	    </div>
-	    <div class="col-lg-2">
-	      <a href="javascript:" ng-click="placeorder();"><center>Place Order </center></a>
-	    </div>
-	  <div class="col-lg-1">
-	  <div class="dropdown open">
-      <a href="#" class="dropdown-toggle" type="mouseover" data-toggle="dropdown"><center>Order</center></a>
-        <div class="dropdown-menu" aria-labelledby="dropdownMenu" style="background-color:#e1e1d0">
-           <a class="dropdown-item" href="#"><center>TrackMyOrder</center></a>
-           <a class="dropdown-item" href="#"><center>MyOrders</center></a>
-           <a class="dropdown-item" href="#"><center>Something else</center></a>
-        </div>
+	  <div class="col-lg-2" style="font-size:16px">
+	  <div class="dropdown">
+      <a href="#" class="dropdown-toggle" type="mouseover" data-toggle="dropdown"> My Orders
+         <span class="caret"></span>
+      </a>
+        <ul class="dropdown-menu" aria-labelledby="dropdownMenu">
+          <li> <a href="#"><center>Track My Order</center></a></li>
+           <li><a href="#"><center> View My Orders</center></a></li>
+        </ul>
       </div>
 	  </div>
-	  <div class="col-lg-2">
-	  <a href="javascript:" ng-click="gotoAcc();" ><center>Account </center></a>
+	  <div class="col-lg-2" style="font-size:16px">
+	  <a href="javascript:" ng-click="gotoAcc();"> 
+	  <span>Account </span>
+	  <span><i class="glyphicon glyphicon-user"></i></span></a>
 	  </div>
     </div>
-	   </fieldset>
+    </fieldset>
 	</div>
 </div>
