--- a/app/views/templates/menu.html
+++ b/app/views/templates/menu.html
@@ -23,7 +23,7 @@
     </div>-->
 	</div>
 	    <div class="col-lg-2" style="font-size:16px">
-	      <a href="javasript:" ng-click="gotoPo();">Place Order </a>
+	      <a href="javascript:" ng-click="placeOrder();">Place Order </a>
 	    </div>
 	  <div class="col-lg-2" style="font-size:16px">
 	  <div class="dropdown">
