--- a/app/views/templates/moreProDtls.html
+++ b/app/views/templates/moreProDtls.html
@@ -14,20 +14,20 @@
                  ->Potassium :84mg    </br>
                  ->Iron    :5%        </br>
                  ->Zinc    :65.6g     </br>
+                 ->fiber   : 3.5g  </br>
                  Brown rice is a healthier choice than white rice for most people due to brown rice's higher fiber, magnesium and zinc content.
                  the milling process converts brown rice to white rice. This process removes the bran and the germ as well as fiber, vitamins and minerals. meaning iron and some of the B-vitamins including thiamin, riboflavin, niacin and folic acid are added to white rice to boost the nutrient content.</br>
                  ->according to the USDA Food and Nutrient Database. Magnesium is a mineral important for bone health and helps you derive energy from the food you eat.</br>
         </p>
-		</div>
-<!--<div style="margin-top:20px">
-		<span><b><u>Semi Polished Rice Nutrition Facts :</u></b></span>
-		<p style="margin-left:35px; color:brown; font-size:15px;margin-top:5px">
-		 One cup of Semi Polished rice contain nutrion:-</br>
-		 Rice is usually threshed and polished after harvesting. Semi-polished rice, which still has the whole germ, contains most of the grain’s original vitamins B1, B2, and E.</br>
-		  In this manner, its storage capacity is increased while retaining the nutrients like thiamin,riboflavin, niacin, and iron.
-         Organically grown fine grain rice,which is semi polished retaining fine layer over the grain which is rich in vit B and a good source of Roughage.
-		</p>
-		</div>-->
+       <div>
+       <img height="140" width="800" style="margin-left:95px" src="\images\logo.jpg">
+       </div>
+       <div>
+         <button class="btn btn-lg btn-primary" ng-click="Back();">< Back</button>
+         <button class="btn btn-lg btn-primary pull-right" ng-click="Order();">Order</button>
+       </div>
+
+	</div>
 	</div>
 	<div class="col-lg-2"></div>
 </div>
