--- a/app/views/templates/productDtls.html.html
+++ b/app/views/templates/productDtls.html.html
@@ -1,7 +1,7 @@
 <div container-fluid>
 <div class="row">
 	<div class="col-lg-2"></div>
-	<div class="col-lg-8" style="border: 3px solid #999; border-radius: 15px; height: 570px">
+	<div class="col-lg-8" style="border: 3px solid #999; border-radius: 15px; height: 568px">
 	<div class="row">
 	   <div class="col-lg-2" style="background-color:#ffffff;margin-top:10px;">
 	  	  <b><u style="padding:5px"> Brown Rice </u></b>
@@ -9,55 +9,54 @@
      </div>
       <div class="col-lg-10" style="margin-top: 30px">
       	  <span><b style="padding:20px; color:#ff4d4d"> Benfits :</b></span>
-          <p style="margin-left:35px; color: #86592d; font-size:15px"> 
+          <p style="margin-left:35px; color:blue; font-size:15px"> 
              1.Brown rice acts as an excellent source of protection against breast cancer. </br>
              2.Brown rice also has a lower glychemic index than most grains which leads to stable blood glucose levels.</br>
              3.You might find it surprising to note that that brown rice is a rich source of anti-oxidants.</br>
              4.Brown sugar is an excellent way of maintaining body weight and keeping excess weight off.</br>
              5.Brown rice offers protection against cardiovascular disease due to its high fiber content. </br>
              
-             <button class="btn btn-sm pull-right" ng-click="Order()"; style="background-color:#808080;font-size:14px; color:#ffffff; margin-left:2px">Order it</button>
-             <button class="btn btn-sm pull-right" ng-click="brDtls();" 
-                style="background-color: #808080; font-size:14px; color:#ffffff">More >></button></br>
+             <a class="btn btn-sm pull-right" style="background-color:#bf80ff;font-size:14px; color:#ffffff; margin-left:2px">Order it</a>
+             <button class="btn btn-sm pull-right" ng-click="moreDtls();" 
+                style="background-color: #cccc00; font-size:14px">More >></button></br>
           </p> 
       </div>
           <legend style="background-color:#cccc00"></legend>
 	</div>
   <div class="row">
      <div class="col-lg-2" style="background-color:#ffffff;margin-top:10px;">
-        <b><u style="padding:3px">Semi Polished Rice</u></b>
+        <b><u style="padding:5px">One Time Polished Rice</u></b>
         <img height="110" width="180" src="images/semi-polished.jpg"> 
      </div>
       <div class="col-lg-10" style="margin-top: 30px">
           <span><b style="padding:20px; color:#ff4d4d"> Benfits :</b></span>
-          <p style="margin-left:35px; color: #86592d; font-size:15px"> 
+          <p style="margin-left:35px; color:blue; font-size:15px"> 
              1.The Organic Semi-Brown Rice Health meets Taste buds. The Texture is good, so does the taste.</br>
              2.Semi-polished rice, which still has the whole germ, contains most of the grain’s original vitamins B1, B2, and E.</br>
              3.They fall in between Fully polished and Unpolished rice.</br>
              4.Semi polished retaining fine layer over the grain .</br>
              5.Semi-polished balance health and taste.
-             <button class="btn btn-sm pull-right" ng-click="Order();" style="background-color:#808080;font-size:14px; color:#ffffff; margin-left:2px">Order it</button>
-             <button class="btn btn-sm pull-right" ng-click="spDtls();" style="background-color:#808080;font-size:14px;color:#ffffff">More >></button></br>
+             <a class="btn btn-sm pull-right" style="background-color:#bf80ff;font-size:14px; color:#ffffff; margin-left:2px">Order it</a>
+             <a class="btn btn-sm pull-right" ng-click="moreDtls();" style="background-color:#cccc00;font-size:14px">More >></a></br>
           </p> 
       </div>
           <legend style="background-color:#cccc00"></legend>
   </div>
   <div class="row">
      <div class="col-lg-2" style="background-color:#ffffff;margin-top:10px;">
-       <b><u style="padding:3px">Fully Polished Rice</u></b>
-       <img height="110" width="180" src="images/white-rice.jpg"> 
+        <b><u style="padding:5px">Fully Polished Rice</u></b>
+        <img height="110" width="180" src="images/white-rice.jpg"> 
      </div>
       <div class="col-lg-10" style="margin-top: 30px">
           <span><b style="padding:20px; color:#ff4d4d"> Benfits :</b></span>
-          <p style="margin-left:35px; color: #86592d; font-size:15px">
+          <p style="margin-left:35px; color:blue; font-size:15px">
              1.The polishing processes of white rice removes most of the important vitamins and other nutrients from it.</br> 
              2.white rice is low in fibre.</br>
              3.the white rice is to be fortified with important vitamins and mineral premixes.</br>
              4.as polished rice is nothing more than refined starch.</br>
              5.white rice leaves many people vulnerable to the neurological disease beriberi.
-             <button class="btn btn-sm pull-right" ng-click="Order();" style="background-color:#808080;font-size:14px; color:#ffffff; margin-left:2px">Order it</button>
-             <button class="btn btn-sm pull-right" ng-click="fpDtls();" style="background-color:#808080;font-size:14px;color:#ffffff">More >>
-             </button></br>
+             <a class="btn btn-sm pull-right" style="background-color:#bf80ff;font-size:14px; color:#ffffff; margin-left:2px">Order it</a>
+             <a class="btn btn-sm pull-right" ng-click="moreDtls();" style="background-color:#cccc00;font-size:14px">More >></a>   </br>
           </p> 
       </div>
           <legend style="background-color:#cccc00"></legend>
