--- a/app/views/templates/footer.html
+++ b/app/views/templates/footer.html
@@ -25,12 +25,12 @@
                                     <label>
             				 	          email-id:
                                     </label>
-                                        <span><input type="text" name="text" value="sumalathaeslavath@gmail.com" disabled style="width:243px"></span>
+                                        <span><input type="text" name="text" value="sumalathaeslavath@gmail.com" disabled style="width:330px"></span>
 	     						</div>
             				</fieldset>
             			</div>
             			<div class="row" ng-show="true">
-            				<fieldset style="border: 0px solid #c0c0c0;">
+            				<fieldset style="border: 0px solid #c0c0c0;padding-left: 87px">
             				 	<div>
             				 	 <textarea rows="4" cols="50" placeholder="Comment here......" style="width:332px;height: 100px;"></textarea>
 	     						</div>
