--- a/app/views/templates/header.html
+++ b/app/views/templates/header.html
@@ -3,15 +3,29 @@
 		<div class="col-lg-2" style="margin-left: -15px;">
 		      <img height="40" width="170" src="\images\logo.jpg">
 		</div>
-		<div class="col-lg-7" style="font-size: 28px;color:white">
+		<div class="col-lg-5" style="font-size: 28px;color:white">
 		      Maa Oori Rice
 		</div>
-		<div class="col-lg-2" style="color:white; font-size: large; padding-left: 46px;">
+		<div class="col-lg-2" style="color:white; font-size: large; padding-left: 49px;">
 			<center>
 		 		<a href="#/" style="color:white;">Sumalatha Eslavath </a>
 		 	</center>
-		 	
+		 </div>		
+		<div class="col-lg-1" style="color:white; font-size: large;" ng-show="true">
+		    <center>
+		    |
+			 	<a href="javascript:" ng-click="login();" style="color:white;display: flex;float: right;">
+                   Login</a>
+            </center>       
 		</div>
+		<div class="col-lg-1" style="color:white; font-size: large;" ng-show="false">
+             <center>
+             |
+			 	<a href="javascript:" ng-click="logout();" style="color:white;display: flex;float: right;">
+                 Logout</a>
+             </center>    
+		</div>
+
 		<div class="col-lg-1" style="color:white;font-size: large;margin-left: -40px;">
 			<div>
 				<center>
