login service committed

--- a/app/views/templates/login.html
+++ b/app/views/templates/login.html
@@ -32,7 +32,7 @@
 			<div class="row" style="margin-left:5px;margin-top:15px">
 				<button class="btn btn-primary" style="width:162px; margin-left:120px" ng-click="login();">Login</button>
 			 </div>
-		</form>	{{loginUserName}}
+		</form>
 			 <div class ="row" style="margin-top:20px; margin-left:110px">
 			 <h5>----New to Maa Oori Rice ?----</h5>
 			 </div>
