--- a/app/views/templates/UserReg.html
+++ b/app/views/templates/UserReg.html
@@ -2,12 +2,13 @@
 <div class="row">
 	<div class="col-lg-2"></div>
 	<div class="col-lg-8" style="border: 3px solid #999; border-radius: 15px; height: 568px">
+	<div style="color:grey">
+		        <h3><u><center> User Registration </center></u></h3>
+		   </div>
 		<form>
 		<center>
 		<fieldset style="border: 5px solid #c18fbf !important;margin-top:25px;padding: 0.35em 0.625em 0.75em;background-color:#f1f2f3;border-radius: 5px;width: 401px;">
-		   <div style="color:grey">
-		        <h3><u><center> User Registration </center></u></h3>
-		   </div>
+		   
            <div class="row" style="margin-bottom: 5px; margin-top:25px">
 			 <div class="col-lg-4">
 				<span><label class="lbl">First Name :</label></span>
@@ -28,7 +29,7 @@
 		  </div>
 	        <div class="row" style="margin-bottom: 5px">
 			  <div class="col-lg-4">
-				<span><label class="lbl" style="padding-left:34px">email :</label></span>
+				<span><label class="lbl" style="padding-right:29px">E-mail :</label></span>
 				<span style="color:red">*</span>
 			  </div>
 			  <div class="col-lg-6">
@@ -46,20 +47,20 @@
 			</div>
 			<div class="row" style="margin-bottom: 5px">
 			  <div class="col-lg-4">
-			   <label class="lbl">Address :</label>
+			   <label class="lbl" style="margin-right: 17px">Address :</label>
 	     	  </div>
 			</div>
 		<div>
 			<fieldset style="border: 1px solid #c0c0c0;border-radius: 14px">
-			<div style="margin-left:90px; margin-top:10px">
-        	  <label class="lbl"> Line1:</label>
+			<div style="margin-left:31px; margin-top:10px">
+        	  <label class="lbl">Address Line1:</label>
         	  <input type="text" name="add" ng-model="Line1" maxlength="50">
 		    </div>
-		    <div style="margin-left:90px;margin-top:4px">
-        	  <label class="lbl"> Line2:</label>
+		    <div style="margin-left:31px;margin-top:4px">
+        	  <label class="lbl">Address Line2:</label>
         	  <input type="text" name="add" ng-model="Line2" maxlength="50">
 		    </div>
-		    <div style="margin-left:95px;margin-top:4px">
+		    <div style="margin-left:99px;margin-top:4px">
         	  <label class="lbl"> City : </label>
         	  <input type="text" name="City" ng-model="City" maxlength="20">
 		    </div>
@@ -67,7 +68,7 @@
         	  <label class="lbl"> State : </label>
         	  <input type="text" name="State" ng-model="State" maxlength="20">
 		    </div>	
-		    <div style="margin-left:99px;margin-top:4px">
+		    <div style="margin-left:102px;margin-top:4px">
         	  <label class="lbl"> Pin : </label>
         	  <input type="text" name="Pin" ng-model="Pin" maxlength="6">
 		    </div>	
