--- a/app/views/templates/login.html
+++ b/app/views/templates/login.html
@@ -1,12 +1,12 @@
 <div class="container-fluid">
 <div class="row">
 	<div class="col-lg-2"></div>
-	<div class="col-lg-8" style="border: 3px solid #999; border-radius: 15px; height: 568px">
+	<div class="col-lg-8" style="border: 3px solid #999; border-radius: 15px; height: 458px">
 		<div class="row">
 		<div class="col-lg-7"></div>
 		<div class="col-lg-5">
 		<form>
-		<fieldset style="border: 5px solid #7a7a61 !important;margin-top:25px;padding: 0.35em 0.625em 0.75em;background-color:#f1f2f3;border-radius: 5px">
+		<fieldset style="border: 5px solid #7a7a61 !important;margin-top:25px;padding: 0.35em 0.625em 0.75em;background-color:#f1f2f3;border-radius: 14px">
 		<div style="color:grey">
 		<h3><u><center> Login</center></u></h3>
 		</div>
@@ -20,26 +20,28 @@
 		  </div>
 		  <div class="row">
 			 <div class="col-lg-4">
-				<span><label class="lbl"> PassWord :</label></span>
+				<span><label class="lbl" style="margin-left: 6px;"> Password :</label></span>
 			 </div>
 			 <div class="col-lg-6" >
-				<input type="text" name="password" ng-model="password" required maxlength="25">
+				<input type="password" name="password" ng-model="password" required maxlength="25">
 			 </div>
 			</div>
-			<div class="row" style="margin-top:5px;margin-left:220px">
+			<div class="row" style="margin-top:5px;margin-left:169px">
 				<a href="#">Forgot Password ?</a>
 			</div>
 			<div class="row" style="margin-left:5px;margin-top:15px">
-				<button class="btn btn-primary" style="width:162px; margin-left:120px" ng-click="login();">Login</button>
+			<center>
+				<button class="btn btn-primary" style="width:77px;" ng-click="login();">Login</button>
+			</center>	
 			 </div>
 		</form>
 			 <div class ="row" style="margin-top:20px; margin-left:110px">
-			 <h5>----New to Maa Oori Rice ?----</h5>
+			   <a href="javascript:" ng-click="Register();" padding-left: 11px;">Create your account</a>
 			 </div>
-			 <div class="row" style="margin-left:5px;margin-top:10px">
+			 <!--<div class="row" style="margin-left:5px;margin-top:10px">
 				<button class="btn btn" ng-click="Register();" 
 				 style= "width:162px; margin-left:120px; background-color:#c4c475">Create Your Account</button>
-			 </div>	
+			 </div>--> 
 		</fieldset>	
 		</div>	
 		</div>
