--- a/app/views/templates/placeorder.html
+++ b/app/views/templates/placeorder.html
@@ -67,16 +67,16 @@
         	<input type="text" name="add" ng-model="Line2">
 		</div>
 		<div class="row">
-		<div class="col-lg-4" style="margin-left:50px; margin-bottom:5px">
-        	<label class="lbl"> city :</label>
-        	<select style="margin-left:8px;width:125px">
+		<div class="col-lg-6" style="margin-left:50px; margin-bottom:5px">
+        	<label class="lbl"> City :</label>
+        	<select style="margin-left:8px;width:172px">
         		<option value="Hyd">Hyderabad</option>
         		<option value="wgl">Warngal</option>
         		<option value="Knr">Karimnagar</option>
         		<option value="Crl">Circilla</option>
         	</select>
 		</div>
-		<div class="col-lg-4" style="margin-left:14px">
+		<div class="col-lg-6" style="margin-left:49px">
 			<label class="lbl">State :</label>
 			<select>
 				<option value="TS">Telangana</option>
