--- a/app/views/templates/menu.html
+++ b/app/views/templates/menu.html
@@ -31,13 +31,13 @@
          <span class="caret"></span>
       </a>
         <ul class="dropdown-menu" aria-labelledby="dropdownMenu">
-          <li> <a href="#"><center>Track My Order</center></a></li>
-           <li><a href="#"><center> View My Orders</center></a></li>
+          <li> <a href="javascript:" ng-click="track();"><center>Track My Order</center></a></li>
+           <li><a href="javascript:" ng-click="order();"><center> View My Orders</center></a></li>
         </ul>
       </div>
 	  </div>
 	  <div class="col-lg-2" style="font-size:16px">
-	  <a href="javascript:" ng-click="gotoAcc();"> 
+	  <a href="javascript:" ng-click="userAcc();"> 
 	  <span>Account </span>
 	  <span><i class="glyphicon glyphicon-user"></i></span></a>
 	  </div>
